--- a/jsp-demo/pom.xml
+++ b/jsp-demo/pom.xml
@@ -56,6 +56,11 @@
       <artifactId>jstl</artifactId>
       <version>1.2</version>
     </dependency>
+    <dependency>
+      <groupId>org.mybatis</groupId>
+      <artifactId>mybatis</artifactId>
+      <version>3.5.6</version>
+    </dependency>
   </dependencies>
 
 
